--- a/index.html
+++ b/index.html
@@ -62,6 +62,18 @@
             text-decoration: underline;
         }
 
+        /* New CSS for the image */
+        .profile-image {
+            border-radius: 50%;
+            width: 150px;
+            height: 150px;
+            object-fit: cover;
+            margin: 0 auto 15px;
+            display: block;
+            border: 5px solid #fff;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
+
         section {
             background: #fff;
             margin: 20px 0;
@@ -148,6 +160,8 @@
 <body>
     <header>
         <div class="container">
+            <!-- Add the image here -->
+            <img src="Q10983.jpg"alt="Deepak Kailas Shinde" class="profile-image">
             <h1>Deepak Kailas Shinde</h1>
             <p><a href="https://www.linkedin.com/in/deepak-shinde-8994431aa/" target="_blank" rel="noopener">LinkedIn Profile</a></p>
             <p>Email: <a href="mailto:deepak.shinde199914@gmail.com">deepak.shinde199914@gmail.com</a> | Phone: 8007329752</p>
