--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     <header>
         <div class="container">
             <!-- Add the image here -->
-            <img src="portfolio/Q10983.jpg"alt="Deepak Kailas Shinde" class="profile-image">
+            <img src="Q10983.jpg"alt="Deepak Kailas Shinde" class="profile-image">
             <h1>Deepak Kailas Shinde</h1>
             <p><a href="https://www.linkedin.com/in/deepak-shinde-8994431aa/" target="_blank" rel="noopener">LinkedIn Profile</a></p>
             <p>Email: <a href="mailto:deepak.shinde199914@gmail.com">deepak.shinde199914@gmail.com</a> | Phone: 8007329752</p>
